# requirements-ambiguity-finder-streamlit

./: Dockerfile  app.py  fly.toml  pyproject.toml
rule_based_ambiguity_finder/: adverb.py  combinator.py  escape.py  indefinite_article.py  infinitive.py  negation.py  open_ended.py  passive_voice.py  pronoun.py  purpose.py  temporal_dependencies.py  unachievable_absolute.py  universal_qualitifcation.py  unmeasurable.py  vague_term.py
